--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Productiva</string>
     <string name="tagline">The only productivity \napp you will need!</string>
     <string name="title">PRODUCTIVA</string>
+    <string name="tap">Tap anywhere to continue...</string>
+    <string name="to_do_list">To Do</string>
+    <string name="reminder">Remind</string>
+    <string name="notes">Notes</string>
+    <string name="timer">Timer</string>
+
 </resources>
