--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,20 @@
     <string name="notes">Notes</string>
     <string name="timer">Timer</string>
 
+    <!--Notepad Strings-->
+    <string name="noteMyNote">My Notes</string>
+    <string name="noteSearchNotes">Search Notes</string>
+    <string name="noteNoteTitle">Note Title</string>
+    <string name="noteNoteSubtitle">Note Subtitle</string>
+    <string name="noteTypeNote">Write Note Here…</string>
+    <string name="noteMiscellaneous">Miscellaneous</string>
+    <string name="noteChooseColor">Choose Color</string>
+    <string name="note_add_image">Add Image</string>
+    <string name="note_add_url">Add URL</string>
+    <string name="note_enter_url">Enter URL</string>
+    <string name="add">ADD</string>
+    <string name="cancel">Cancel</string>
+    <string name="note_delete_note">Delete Note</string>
+    <string name="note_sure_delete">Are You Sure You Want to Delete This Note?</string>
+
 </resources>
