About page setup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="cancel">Cancel</string>
     <string name="note_delete_note">Delete Note</string>
     <string name="note_sure_delete">Are You Sure You Want to Delete This Note?</string>
+    <string name="filler">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since
+        the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </string>
 
 </resources>
